Added locks to functions that read/write sensorValuesList.
Will need to deep copy or make new LinkedList samples before Producer puts
them into the BlockingQueue.